--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,84 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Pretendard Thin 100 */
+@font-face {
+  font-family: "Pretendard";
+  src: url("/fonts/pretendard-thin.woff2") format("woff2");
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Pretendard ExtraLight 200 */
+@font-face {
+  font-family: "Pretendard";
+  src: url("/fonts/pretendard-extralight.woff2") format("woff2");
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Pretendard Light 300 */
+@font-face {
+  font-family: "Pretendard";
+  src: url("/fonts/pretendard-light.woff2") format("woff2");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Pretendard Regular 400 */
+@font-face {
+  font-family: "Pretendard";
+  src: url("/fonts/pretendard-regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Pretendard Medium 500 */
+@font-face {
+  font-family: "Pretendard";
+  src: url("/fonts/pretendard-medium.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Pretendard SemiBold 600 */
+@font-face {
+  font-family: "Pretendard";
+  src: url("/fonts/pretendard-semibold.woff2") format("woff2");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Pretendard Bold 700 */
+@font-face {
+  font-family: "Pretendard";
+  src: url("/fonts/pretendard-bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Pretendard ExtraBold 800 */
+@font-face {
+  font-family: "Pretendard";
+  src: url("/fonts/pretendard-extrabold.woff2") format("woff2");
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Pretendard Black 900 */
+@font-face {
+  font-family: "Pretendard";
+  src: url("/fonts/pretendard-black.woff2") format("woff2");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
