--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,3 +82,19 @@
   font-style: normal;
   font-display: swap;
 }
+
+/*input animation*/
+@keyframes fadeUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fadeUp {
+  animation: fadeUp 0.5s ease forwards;
+}
